Added more items to portfolio. Styled for responsive.

--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,6 @@
                         <ul>
                             <li>Photography</li>
                             <li>Gluten free baking <em>(because I have to)</em></li>
-                            <li>Interior design</li>
                             <li>Home remodeling</li>
                             <a id="work"></a>
                             <li>Raising my kids</li>
@@ -105,7 +104,7 @@
                             <h3>Rushing Family Practice</h3>
                         </a>
                         <div class="row">
-                            <div class="project-example col-sm-7">
+                            <div class="project-example col-md-7 col-sm-12">
                                 <div class="desktop">
                                     <div class="desktop-img">
                                         <img src="images/rfp-desktop.png">
@@ -118,7 +117,7 @@
                                     <div class="mobile-btn"></div>
                                 </div>
                             </div>
-                            <div class="project-desc col-sm-5">
+                            <div class="project-desc col-md-5 col-sm-12">
                                 <p>This was a project for a clinic in my hometown. The staff were a great group of people and I especially loved this project because I was able to do a lot of design and branding. The didn't have an existing site and the only artwork I was provided with was their logo. With their input I created the design concept and a lot of the copy to give a small town clinic a professional feel that was still warm and inviting.</p>
                                 <hr>
                                 <ul class="site-components text-center">
@@ -141,7 +140,7 @@
                             <h3>Money Law Firm</h3>
                         </a>
                         <div class="row">
-                            <div class="project-example col-sm-7">
+                            <div class="project-example col-md-7 col-sm-12">
                                 <div class="desktop">
                                     <div class="desktop-img">
                                         <img src="images/mlf-desktop.png">
@@ -153,9 +152,8 @@
                                     </div>
                                     <div class="mobile-btn"></div>
                                 </div>
-                                <!-- mobile div goes here -->
                             </div>
-                            <div class="project-desc col-sm-5">
+                            <div class="project-desc col-md-5 col-sm-12">
                                 <p>I built this site for a lawyer who had an interesting request. His office was located in a small town outside of Dallas. He wanted a professional site that would appeal to his Dallas area clients without feeling alienated from his local patrons. One solution I implimented was using local area photos (which I took myself) as a key comonent for the design.</p>
                                 <hr>
                                 <ul class="site-components text-center">
@@ -179,7 +177,7 @@
                             <h3>TaleSpinner Splash Page</h3>
                         </a>
                         <div class="row">
-                            <div class="project-example col-sm-7">
+                            <div class="project-example col-md-7 col-sm-12">
                                 <div class="desktop">
                                     <div class="desktop-img">
                                         <img src="images/talespinner.png">
@@ -187,7 +185,7 @@
                                 </div>
                                 <!-- mobile div goes here -->
                             </div>
-                            <div class="project-desc col-sm-5">
+                            <div class="project-desc col-md-5 col-sm-12">
                                 <p>While attending TIY, I participated in a StartUp Weekend event. I was excited to work on an application that created personalized stories using pictures loaded up by the user. I thought the idea was phenominal and I'm personally passionate about the future of education for our children. </p>
                                 <p>For my part, I created the landing page we used in our social media campaign that connected those who were interested with our newsletter (via MailChimp). We ended up winning the competition.</p>
                                 <hr>
@@ -211,7 +209,7 @@
                             <h3>Etsy Lighting</h3>
                         </a>
                         <div class="row">
-                            <div class="project-example col-sm-7">
+                            <div class="project-example col-md-7 col-sm-12">
                                 <div class="desktop">
                                     <div class="desktop-img">
                                         <img src="images/etsylights.png">
@@ -219,7 +217,7 @@
                                 </div>
                                 <!-- mobile div goes here -->
                             </div>
-                            <div class="project-desc col-sm-5">
+                            <div class="project-desc col-md-5 col-sm-12">
                                 <p>One of the technologies we spent time on while at TIY was Backbonejs. I created this simple site using the backbone framework to pull in items using Etsy's API.</p>
                                 <hr>
                                 <ul class="site-components text-center">
@@ -237,6 +235,86 @@
                                 </ul>
                                 <hr>
                                 <p class="text-center"><a class="btn btn-light btn-lg" href="http://colorturtle.github.io/EtsyLighting/#/items/128217412" target="blank">GitHub Site</a></p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <div class="container">
+                    <div class="project-bio">
+                        <a class="main-link-dark" href="http://colorturtle.github.io/mobber/">
+                            <h3>Neighborgood App</h3>
+                            <h4>(My Last Assignment at TIY)</h4>
+                        </a>
+                        <div class="row">
+                            <div class="project-example col-md-7 col-sm-12">
+                                <div class="desktop">
+                                    <div class="desktop-img">
+                                        <img src="images/nga-desktop.png">
+                                    </div>
+                                </div>
+                                <div class="mobile">
+                                    <div class="mobile-img">
+                                        <img src="images/nga-mobile.png">
+                                    </div>
+                                    <div class="mobile-btn"></div>
+                                </div>
+                            </div>
+                            <div class="project-desc col-md-5 col-sm-12">
+                                <p>This was my final project at TIY. When you are looking to buy a home, finding information about the surrounding neighborhood can be difficult. Myself and a fellow classmate created this to help. We created a datatbase of homes for sale that users could select. We used Instragram's API to pull nearby Instagram activity to give a feel for the surrounding area.</p>
+                                <hr>
+                                <ul class="site-components text-center">
+                                    <li>*HTML</li>
+                                    <li>*Sass</li>
+                                    <li>*Twitter Bootstrap</li>
+                                    <li>*JavaScript/jQuery</li>
+                                    <li>*Ember</li>
+                                    <li>*Handlebars Template</li>
+                                    <li>*Mobile First Design</li>
+                                    <li>
+                                        <a href="https://github.com/joshuamaxwell/neighborgood">
+                                        *GitHub Code</a>
+                                    </li>
+                                </ul>
+                                <hr>
+                                <p class="text-center"><a class="btn btn-lg" href="http://colorturtle.github.io/mobber/" target="blank">GitHub Site</a></p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-item blue-background">
+                <div class="container">
+                    <div class="project-bio">
+                        <a class="main-link" href="http://colorturtle.github.io/mobber/">
+                            <h3>Mobber (from png to browser)</h3>
+                            <h4>(My First Assignment at TIY)</h4>
+                        </a>
+                        <div class="row">
+                            <div class="project-example col-md-7 col-sm-12">
+                                <div class="desktop">
+                                    <div class="desktop-img">
+                                        <img src="images/mobber.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-desc col-md-5 col-sm-12">
+                                <p>This was the first assignment we had at TIY. We took a png of a website design and were told to create the website with pixel perfection.</p> 
+                                <p>You can view the original png we were given <a href="images/mobber-original.png" target="blank">here</a>.</p>
+                                <hr>
+                                <ul class="site-components text-center">
+                                    <li>*HTML</li>
+                                    <li>*CSS</li>
+                                    <li>
+                                        <a href="https://github.com/ColorTurtle/mobber">
+                                        *GitHub Code</a>
+                                    </li>
+                                </ul>
+                                <hr>
+                                <p class="text-center"><a class="btn btn-lg btn-light" href="http://colorturtle.github.io/mobber/" target="blank">GitHub Site</a></p>
 
                             </div>
                         </div>
