--- a/app/index.html
+++ b/app/index.html
@@ -33,10 +33,7 @@
         <div class="header">
             <div class="container">
                 <div class="header-copy">
-                    <a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat">
-                        <h3 class="text-center text-jumbo-light main-link">daniel at colorturtle dot com</h3>
-                    </a>
-                    <p class="text-center text-bigger">A relentless pursuit of 'why'.</p>
+                    <p class="text-bigger">A relentless pursuit of 'why'.</p>
                 </div>
             </div>
         </div>
@@ -44,7 +41,7 @@
             <div class="nav-items col-sm-12">
                 <div class="col-sm-5">
                 <p class="text-bigger"><strong>Daniel Donaldson</strong></p>
-                <p>Font-End Developer</p>
+                <p>Freelance Front-End Developer</p>
                 </div>
                 <div class="col-sm-7">
                     <ul class="nav nav-pills pull-right">
@@ -61,19 +58,43 @@
             <div class="row">
                 <div class="col-sm-7">
                     <div class="jumbotron">
-                            <h2 class="text-center">About Me</h2>
-                        <p>I am a new developer having just completed a bootcamp style front end program. I have a simple and clean design aesthetic. I work best in collaboration and I enjoy taking abstract ideas and creating something concrete, efficient and beautiful.</p>
+                        <h2 class="text-center">About Me</h2>
+                        <p>I am a freelance developer having just completed a bootcamp style front-end program. I persistently ask 'why' to get the clearest picture of the project goal and how best to accomplish it. I have a simple and clean design aesthetic. I work best in collaboration and I enjoy taking abstract ideas and creating something concrete, efficient and beautiful.</p>
                         <h3 class="text-center">A little more 'About Me'</h3>
-                        <p>Two years ago I decided to make a change. I left a career in the non-profit field to pursue web design. <em>Why?</em> I am convinced I can make a wider impact on the world via web applications.</p> 
+                        <p><a href="http://www.colorturtle.com/2013-part-1-of-2/" target="blank">Two years ago I decided to make a change</a>. I left a career in the non-profit field to pursue web design. <em>Why?</em> I am convinced I can make a wider impact on the world via web applications.</p> 
                         <p>Software design is about changing behavior, making things more efficient, and being a catalyst for decision. In my opinion, the harmony between design and development (and the people behind both) combine to create better solutions for the end user. I'm looking for a position on a design team as a front-end developer where I can be part of that process.</p>
-                        <p class="text-center"><a class="btn btn-lg" href="#">Splendid!</a></p>
+                    </div>
+                    <div class="jumbotron">
+                        <h2 class="text-center">Keep In Touch</h2>
+                        <ul class="contact-links text-center">
+                            <li>
+                                <a href="http://www.colorturtle.com" target="blank">
+                                *Blog
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://twitter.com/Color_Turtle" target="blank">
+                                *Twitter
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/ColorTurtle" target="blank">
+                                *GitHub
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://www.linkedin.com/in/colorturtle" target="blank">
+                                *LinkedIn
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-sm-5">
                     <div class="jumbotron">
                         <h2 class="text-center resume">Resume</h2>
                         <ul>
-                            <li>Studied Front End Engineering at <a href="http://theironyard.com/academy/front-end-engineering" target="_blank">The Iron Yard Academy.</a></li>
+                            <li>Studied Front-End Engineering at <a href="http://theironyard.com/academy/front-end-engineering" target="_blank">The Iron Yard Academy.</a></li>
                             <li>UX Intern (later promoted to Production Coordinator) at <a href="http://getlevelten.com/" target="_blank">LevelTen Interactive.</a></li>
                             <li>Freelance design and (amateur) development work for several years.</li>
                             <li>Degree in psychology from <a href="http://www.unt.edu" target="_blank">University of North Texas</a>, which I use almost every day when I code and collaborate.</li>
@@ -85,9 +106,12 @@
                         <ul>
                             <li>Photography</li>
                             <li>Gluten free baking <em>(because I have to)</em></li>
-                            <li>Home remodeling</li>
-                            <a id="work"></a>
-                            <li>Raising my kids</li>
+                            <li>
+                                <a href="http://www.colorturtle.com/source-of-all-creativity-or-maybe-just-mine/" target="blank">
+                                Home remodeling
+                                </a>
+                            </li>
+                            <li>Chasing after four my kids</li>
                         </ul>
                     </div>
                 </div>
@@ -96,9 +120,10 @@
 
 
         <div class="work">
+        <a id="work" class="work-link"></a>
             <div class="portfolio-item blue-background">
                 <div class="container">
-                    <h2>My Recent Work</h2>
+                    <h2>My Very Best Work (so far)</h2>
                     <div class="project-bio">
                         <a class="main-link" href="http://rushingfamilypractice.com/">
                             <h3>Rushing Family Practice</h3>
@@ -154,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="project-desc col-md-5 col-sm-12">
-                                <p>I built this site for a lawyer who had an interesting request. His office was located in a small town outside of Dallas. He wanted a professional site that would appeal to his Dallas area clients without feeling alienated from his local patrons. One solution I implimented was using local area photos (which I took myself) as a key comonent for the design.</p>
+                                <p>I built this site for a lawyer who had an interesting request. His office was located in a small town outside of Dallas. He wanted a professional site that would appeal to his Dallas area clients without feeling alienated from his local patrons. One solution I implimented was using local area photos (which I took myself) as a key component for the design.</p>
                                 <hr>
                                 <ul class="site-components text-center">
                                     <li>*HTML</li>
@@ -271,6 +296,7 @@
                                     <li>*Twitter Bootstrap</li>
                                     <li>*JavaScript/jQuery</li>
                                     <li>*Ember</li>
+                                    <li>*API Integration</li>
                                     <li>*Handlebars Template</li>
                                     <li>*Mobile First Design</li>
                                     <li>
@@ -279,14 +305,14 @@
                                     </li>
                                 </ul>
                                 <hr>
-                                <p class="text-center"><a class="btn btn-lg" href="http://colorturtle.github.io/mobber/" target="blank">GitHub Site</a></p>
+                                <p class="text-center"><a class="btn btn-lg" href="http://www.neighborgoodapp.com/" target="blank">Live Site</a></p>
 
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="portfolio-item blue-background">
+            <div class="portfolio-item blue4-background">
                 <div class="container">
                     <div class="project-bio">
                         <a class="main-link" href="http://colorturtle.github.io/mobber/">
