Fixed mobile bugs using chrome emulation. Moved resume from pdg folder to images.

--- a/app/index.html
+++ b/app/index.html
@@ -42,12 +42,16 @@
                 <div class="col-sm-5">
                 <p class="text-bigger"><strong>Daniel Donaldson</strong></p>
                 <p>Freelance Front-End Developer</p>
+                <p class="phone">
+                <a href="tel+1-903-456-8189" class="main-link font2">903.456.8189</a>
+                </p>
                 </div>
                 <div class="col-sm-7">
                     <ul class="nav nav-pills pull-right">
                         <li><a href="#about">About</a></li>
                         <li><a href="#work">Work</a></li>
-                        <li><a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat">Contact</a></li>
+                        <li><a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat">E-mail Me!</a></li>
+                        <!-- <li><a>Call Me!</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -99,7 +103,7 @@
                             <li>Freelance design and (amateur) development work for several years.</li>
                             <li>Degree in psychology from <a href="http://www.unt.edu" target="_blank">University of North Texas</a>, which I use almost every day when I code and collaborate.</li>
                         </ul>
-                        <p class="text-center"><a class="btn btn-lg" href="pdfs/resume.pdf" target="blank">Get the pdf!</a></p>
+                        <p class="text-center"><a class="btn btn-lg" href="images/resume.pdf" target="blank">Get the pdf!</a></p>
                     </div>
                     <div class="jumbotron">
                         <h2 class="text-center">Hobbies</h2>
