More styling to navigation for mobile optimization.

--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,9 @@
         <div class="navigation">
             <div class="nav-items col-sm-12">
                 <div class="col-sm-5">
-                <p class="text-bigger"><strong>Daniel Donaldson</strong></p>
+                <p class="text-bigger contact-info"><strong>Daniel Donaldson</strong></p>
                 <p>Freelance Front-End Developer</p>
-                <p class="phone">
+                <p class="phone contact-info">
                 <a href="tel+1-903-456-8189" class="main-link font2">903.456.8189</a>
                 </p>
                 </div>
