Adjusted for some bugs & feedback.

--- a/app/index.html
+++ b/app/index.html
@@ -39,19 +39,24 @@
         </div>
         <div class="navigation">
             <div class="nav-items col-sm-12">
-                <div class="col-sm-5">
-                <p class="text-bigger contact-info"><strong>Daniel Donaldson</strong></p>
-                <p>Freelance Front-End Developer</p>
-                <p class="phone contact-info">
-                <a href="tel+1-903-456-8189" class="main-link font2">903.456.8189</a>
-                </p>
+                <div class="col-sm-8">
+                    <div class="site-title">
+                        <span class="text-bigger nav-info client-name"><strong>Daniel Donaldson</strong></span>
+                        <span class="nav-info client-job-title"> Front-End Developer</span>
+                    </div>
+                    <div class="contact-info">
+                        <span class="phone nav-info">
+                            <a href="tel+1-903-456-8189" class="main-link font2">903.456.8189</a>
+                        </span>
+                        <span class="e-mail nav-info"><a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat" class="main-link">daniel@colorturtle.com</a></span>
+                    </div>
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm-4 col-sm-offset-0 col-xs-4 col-xs-offset-4">
                     <ul class="nav nav-pills pull-right">
                         <li><a href="#about">About</a></li>
                         <li><a href="#work">Work</a></li>
-                        <li><a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat">E-mail Me!</a></li>
-                        <!-- <li><a>Call Me!</a></li> -->
+<!--                         <li><a href="mailto:daniel@colorturtle.com?subject=I found your portfolio site and I'd love to chat">E-mail Me!</a></li>
+ -->                        <!-- <li><a>Call Me!</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -62,15 +67,15 @@
             <div class="row">
                 <div class="col-sm-7">
                     <div class="jumbotron">
-                        <h2 class="text-center">About Me</h2>
+                        <h2 class="text-center2">About Me</h2>
                         <p>I am a freelance developer having just completed a bootcamp style front-end program. I persistently ask 'why' to get the clearest picture of the project goal and how best to accomplish it. I have a simple and clean design aesthetic. I work best in collaboration and I enjoy taking abstract ideas and creating something concrete, efficient and beautiful.</p>
-                        <h3 class="text-center">A little more 'About Me'</h3>
+                        <h3 class="text-center2">A little more 'About Me'</h3>
                         <p><a href="http://www.colorturtle.com/2013-part-1-of-2/" target="blank">Two years ago I decided to make a change</a>. I left a career in the non-profit field to pursue web design. <em>Why?</em> I am convinced I can make a wider impact on the world via web applications.</p> 
                         <p>Software design is about changing behavior, making things more efficient, and being a catalyst for decision. In my opinion, the harmony between design and development (and the people behind both) combine to create better solutions for the end user. I'm looking for a position on a design team as a front-end developer where I can be part of that process.</p>
                     </div>
                     <div class="jumbotron">
-                        <h2 class="text-center">Keep In Touch</h2>
-                        <ul class="contact-links text-center">
+                        <h2 class="text-center2">Keep In Touch</h2>
+                        <ul class="contact-links text-center2">
                             <li>
                                 <a href="http://www.colorturtle.com" target="blank">
                                 *Blog
@@ -96,18 +101,18 @@
                 </div>
                 <div class="col-sm-5">
                     <div class="jumbotron">
-                        <h2 class="text-center resume">Resume</h2>
-                        <ul>
+                        <h2 class="text-center2 resume">Resume</h2>
+                        <ul class="cleaner-list">
                             <li>Studied Front-End Engineering at <a href="http://theironyard.com/academy/front-end-engineering" target="_blank">The Iron Yard Academy.</a></li>
                             <li>UX Intern (later promoted to Production Coordinator) at <a href="http://getlevelten.com/" target="_blank">LevelTen Interactive.</a></li>
                             <li>Freelance design and (amateur) development work for several years.</li>
                             <li>Degree in psychology from <a href="http://www.unt.edu" target="_blank">University of North Texas</a>, which I use almost every day when I code and collaborate.</li>
                         </ul>
-                        <p class="text-center"><a class="btn btn-lg" href="images/resume.pdf" target="blank">Get the pdf!</a></p>
+                        <p class="text-center"><a class="btn btn-lg btn-block" href="images/resume.pdf" target="blank">Get the pdf!</a></p>
                     </div>
                     <div class="jumbotron">
-                        <h2 class="text-center">Hobbies</h2>
-                        <ul>
+                        <h2 class="text-center2">Hobbies</h2>
+                        <ul class="cleaner-list">
                             <li>Photography</li>
                             <li>Gluten free baking <em>(because I have to)</em></li>
                             <li>
@@ -129,7 +134,7 @@
                 <div class="container">
                     <h2>My Very Best Work (so far)</h2>
                     <div class="project-bio">
-                        <a class="main-link" href="http://rushingfamilypractice.com/">
+                        <a class="main-link" href="http://rushingfamilypractice.com/" target="blank">
                             <h3>Rushing Family Practice</h3>
                         </a>
                         <div class="row">
@@ -165,7 +170,7 @@
             <div class="portfolio-item blue2-background">
                 <div class="container">
                     <div class="project-bio">
-                        <a class="main-link" href="http://moneylawfirm.net/">
+                        <a class="main-link" href="http://moneylawfirm.net/" target="blank">
                             <h3>Money Law Firm</h3>
                         </a>
                         <div class="row">
@@ -202,7 +207,7 @@
             <div class="portfolio-item blue3-background">
                 <div class="container">
                     <div class="project-bio">
-                        <a class="main-link" href="http://pupalstage.com/">
+                        <a class="main-link" href="http://pupalstage.com/" target="blank">
                             <h3>TaleSpinner Splash Page</h3>
                         </a>
                         <div class="row">
@@ -234,7 +239,7 @@
             <div class="portfolio-item blue4-background">
                 <div class="container">
                     <div class="project-bio">
-                        <a class="main-link" href="http://pupalstage.com/">
+                        <a class="main-link" href="http://pupalstage.com/" target="blank">
                             <h3>Etsy Lighting</h3>
                         </a>
                         <div class="row">
@@ -273,7 +278,7 @@
             <div class="portfolio-item">
                 <div class="container">
                     <div class="project-bio">
-                        <a class="main-link-dark" href="http://colorturtle.github.io/mobber/">
+                        <a class="main-link-dark" href="http://www.neighborgoodapp.com/" target="blank">
                             <h3>Neighborgood App</h3>
                             <h4>(My Last Assignment at TIY)</h4>
                         </a>
@@ -319,7 +324,7 @@
             <div class="portfolio-item blue4-background">
                 <div class="container">
                     <div class="project-bio">
-                        <a class="main-link" href="http://colorturtle.github.io/mobber/">
+                        <a class="main-link" href="http://colorturtle.github.io/mobber/" target="blank">
                             <h3>Mobber (from png to browser)</h3>
                             <h4>(My First Assignment at TIY)</h4>
                         </a>
